--- a/templates/common/form/input_upload.html
+++ b/templates/common/form/input_upload.html
@@ -51,7 +51,7 @@
                 {% endif %}
 
                 <button type="button" class="fr-btn fr-mb-1w" id="{{form_input_files.id_for_label}}_dz_button">
-                    <img class="apilos-fi-btn fr-mr-1w" src="{% static "icons/upload.svg" %}" ></img>Téléverser une image{% if not image_only %} ou un pdf{% endif %}
+                    <img class="apilos-fi-btn fr-mr-1w" src="{% static "icons/upload.svg" %}" ></img>Téléverser une image{% if not image_only %} ou un document{% endif %}
                 </button>
 
                 <script type="text/javascript" nonce="{{request.csp_nonce}}">
@@ -63,8 +63,8 @@
 
             </div>
             <div
-            class="fr-col-12 dropzone dz"
-            id="{{form_input_files.id_for_label}}_dropzone">
+                class="fr-col-12 dropzone dz"
+                id="{{form_input_files.id_for_label}}_dropzone">
                 <div class="fallback">
                     Votre navigateur ne permet pas de téléverser des documents.
                     Nous vous conseillons de modifier vos paramètres concernant
