--- a/templates/stats/index.html
+++ b/templates/stats/index.html
@@ -174,6 +174,7 @@
                         const chart = Highcharts.chart('null_fields', {
                             chart: {
                                 type: 'bar',
+                                height: 800,
                                 styledMode: true
                             },
                             colors: ['#8085e9'],
