--- a/templates/conventions/actions/instructeur_validation.html
+++ b/templates/conventions/actions/instructeur_validation.html
@@ -33,6 +33,11 @@
                                     <div class="block--row-strech">
                                         <div class="block--row-strech-1">
                                             {% include "common/form/input_text.html" with form_input=conventionNumberForm.convention_numero editable=editable_validation %}
+                                            <input
+                                                type="hidden"
+                                                id="{{conventionNumberForm.uuid.id_for_label}}"
+                                                name="{{conventionNumberForm.uuid.html_name}}"
+                                                value="{{ conventionNumberForm.uuid.value|default_if_none:'' }}">
                                         </div>
                                     </div>
                                 </div>
