add: steacky header

--- a/templates/conventions/common/form_header.html
+++ b/templates/conventions/common/form_header.html
@@ -1,7 +1,7 @@
 {% if convention %}
 
     <div class='background-contrast-grey950 fr-pt-2w'></div>
-    <div class='background-contrast-grey950{% if False %} apilos-sticky-top{% endif %} fr-pt-2w'>
+    <div class='background-contrast-grey950 apilos-sticky-top fr-pt-2w'>
         <div class="fr-container">
             <div class="fr-col-12 fr-pb-2w">
                 <div class="fr-highlight">
