update: welcome mail

--- a/templates/emails/welcome_user.html
+++ b/templates/emails/welcome_user.html
@@ -1,5 +1,5 @@
-<h4>Bienvenue sur la plateforme APiLos</h4>
-<span><i>Le portail qui simplifie le conventionnement APL pour le logement social</i></span>
+<h4>Bienvenue sur la plateforme APiLos, un service du SIAP</h4>
+<span><i>Le portail qui facilite l’accès aux logements sociaux par la simplification des conventions</i></span>
 
 <p>Vous avez désormais accès à la plateforme avec les identifiants suivants : </p>
 
@@ -11,9 +11,11 @@
 
 <p>Pour vous connecter, cliquez sur le lien <a href="{{login_url}}">APiLos</a></p>
 
-<p>Si le lien ne fonctionne pas, nous vous prions de copier et coller cette adresse dans le nagigateur de votre choix : {{login_url}}</p>
+<p>Si le lien ne fonctionne pas, nous vous prions de copier et coller cette adresse dans le navigateur de votre choix : {{login_url}}</p>
 
-<p>Dans l'attente de vous retrouver sur APiLos pour une nouvelle convention, nous restons à votre disposition.</p>
+Pour vous aider à saisir vos conventions sur APiLos, retrouvez les tutoriels sur la <a href="https://docs.apilos.beta.gouv.fr/">FAQ</a>.
+
+<p>Avec l’équipe APiLos, nous restons à votre disposition sur <a href="mailto:contact@apilos.beta.gouv.fr"></a>contact@apilos.beta.gouv.fr></a></p>
 
 <p>Cordialement</p>
-<p><b>L'équipe <a href="mailto:contact@apilos.beta.gouv.fr">APiLos</a></b></p>
+<p><b>L'équipe <a href="mailto:contact@apilos.beta.gouv.fr">APiLos</a>, un service du SIAP</b></p>
