--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -31,24 +31,18 @@
                         <div class="fr-header__operator">
                             <img class="fr-responsive-img header__logo" alt="APiLos, conventionnement APL" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAQAAABpN6lAAAAABGdBTUEAALGPC/xhBQAAAAJiS0dE AACqjSMyAAAAB3RJTUUH5QoUDDgbi3Z0iwAACVdJREFUeNrtnWt0VNUVx38TJOH9kCa8CghdC4Jd 7QIqKIhWLEVaKBQfKMUYZPGoohjUgmhEVlt5FASpXRVYlCWpNAXTAgUEKhVBXQIrIAii2JKQEkBC eEoI5HX6IYeTezOZcGfmzt2hM//7ZebOeez/zr1nn8feOyCHBBbyPj8WlEAU8axDoSjhfmlRJOkr FGWMlhZHkn6lClKkRfISCWzQxAtYbFTwqLRYXqHqr1/A94Bp+ls5j0uLJkEfYKq+U8GT0uJJ0Ad4 3qjgKWkRJegDTKFCq2CytJgS9AF+aVSQJi2qBH2ACZTrMi9KiytBH2CcUUG6tMgS9AHGGhXMkBZb gj7AKEp1+TnSokvQB3j4/0cFodAHGGlUME+aggR9gAcp0XVfk6YhQR9gCFd0/TfxSZPxnj7ATynW bSwmTpqQ9/QBBhsVLL2RVOAWfYD7uKzbWnajqMBN+gA/5Bvd3krqSZPznj7AXUYFmdwkTdB7+gD9 uajbXVWXVRAp+gB3ckG3/Q71pYl6Tx/gNs7o9teTIE3We/oAvYwKNtBAmrD39AF6Uqj7ebcuqcAr +gA9OK372kxDaeLe0wfozknd3wc0libvPX2AZE7oPrfTJProA3TjuO73Q5pGH32AruTrvj+iWfTR B7iFXN3/xxIqkKYP0IkcLUM2N0cffYCO/EfLsYdW0UcfoAP/1rJ8yreijz5AGw5pefaRGH30K1Vw UMt0iLbRRx+gNQe0XF/QLvroAyTxmZbtMO2jjz5AIvu1fF/x7eijD9CS3VrGXDo7reTszCWBvzEE gBImcNDcz+eUMOl2tmHvZjJoA0Au93LUvW5W2dwarQ6O40Tpp2m3mpquXFq41U2cOav1v3aKKuBg QLkUih85I3d9VPBuwN9ktydr6/04+5w04WyXfQS9/dbdaXpUkEcWS/zulbKXb9xTQAW7/O49KM3b II+toVe+QQ4cI4eYAqQFkEZMAdICSCOmAGkBpBFTgLQA0ogpQFoAacQUIC2ANGIKkBZAGjEFSAsg jZgCpAWQRkwB0gJII6YAaQGkEfUKCCX+IpFedOE2ADowi5PksZd8aSqRV0AcdzGCwXSz3GvFdP3p GDtYzWZKIipvZx6lNwkcYxPrvFRUc541Pnm1XWdYGDEvnQRmm4DaSpeoygCK+aZEU55hA/vYwVyS 3es4iVmc96N6koNks5fjfofnxSwiyXX6PYwXUPXrmgJSKLDcLeW3boxwnXjDhC4qFJfZQBq9bG7q Proxhj+ZgBaF4jzPE+8a+Zt4iaum7f1stf1B5gOd2FSDahaG1213Vtgeuc+ZXKvXRTzD+Jel/GGG ukK/K5+YNo8wAIDGlmRcC3jKhNUpcljFh8ZzpCpRWyteZBtH2MNi+ly/09783SSzUCg+YZhDf6K7 2WGpt4VbwyLv42mKdFsVLLE8eQ353LxyVc/dRP3YD9Wx5wW0BuozxYTdXWupluC7e9lqe5C2cE+Q Yo/kqOVdXBSyL3dHiyTH+Um1X3taXguF4h8297hn9d21DKjRlWZlTR3G8XN2WQqVk8UPQhK9Ielc Mu0U8mQIM45Uy5ueWaMSnza/F/CIH5cP/Egf4I+soUx/q1ajPik2TZWwPExT0p63LV5cB5w5LWkk scaivocDlhvFNnYzu0ZP8c6WkUFxjIf0/Tv0S5VXFXfWkEkm/kKhKGIRHcMifw19bU/UGr7jqNYI Tpk6G8NwgB6kqV5lti3C7Bnd9ksAjXiBry1CnuM3rrqd+0g1IU6KK8y5TphTC1aY0hcZH2bviYwh ldbV7tbnsG6/Nbxnm9xMjUj8TRNmWcbqkzwecIoykP+actudO7wGjWG6j1/7uKAp5zCPt7gSsS47 M48HzLdslnFWfy4zDm3DmWSM7SZepwKAS+RzilKX5dlFH+AzSOMyexjtSVz+AOPRHex1nsygjXHt SEehuOQBaxvqMdFE/wZ/bfB7m0PHLD3iCaAFC2zzsmCuPL7rigzNOYZCsUMqRVEczf0+1QswAMfR nsGk0AiAo/ThdJi9dyOTngA8IcQ/BLRju34KssJqJ550Y5EO1NV0HDUjgY/0UuaOkNvoa8KrFEe4 RZpSsOis13hLQ6rdjDcsK9yVXofbuoO3UShOhFBzmB72FIpcv5XlDYMxmkJwiRPa8o4hX8YCbzJP 1GM0qXrkdg+DNA1niyoAH+M5Z+h/qrfzPcB0FIqvec5VfY/URJwGSncztkNxmWle5qF6y3R8iqmu 5fpYoCewTuYv8bxskjIqtgbx1LiCZL60zOBOM92FbB+NdQaZtQ7K9rVs7xSSKpGVsh4pNiUUkh7m Yvv3NW9m+aEZf7AZPPdPKYJQwmgT369QnGVGiAGNPmbqNvZf58DDbvAGy5G/hjgese02nmcp95gV gBM0YgQ7de1ibq+lZNAGz6s3I44HeLla2PVFCh3VbWxZBJeRyl8CchnPXPN87WM82R6xcwgf97Mv 5L2AyqF0YMDWky0Gr4ipdTXxoo8hbKx2oOGU/JyAo4fd4L0XjMGT2Q9oyu3cSguH88QrnOBLPqY8 wO/9WGq2Sc7wHBkoEVYiaMwcc9KjWC1p8CQwlDw5g9eAlrQUzPTbliyLwXvNu9yC7UljPfn61K+U XDIZ5162BkfwMcGywtsb4gFuCPg+ay1vnPUqZoXeZow8ki0eCEX8yiuD15IlNpeJmq73GRZhz8N4 ZlgM3j/p4g15+IXtAHU/r/MEDzGSySzjiE0JXzEpYoku+1mm1Kd5zCvyXdhsui1nud/RhI/+/NXm K3aWuXRwWQr7Cu/PXiROA6jPCxYvsV30CFiyI7+zDEyKEjKdOCM5xHCTQlORw33ekId+ll30S0y7 rtFrwgTb4leRzWNhD1JtyLA8gUu8yyT7iuWRy3Ls/xnHcLbZlJDDlJA3QnxMlDF40MQYvDx+FnTt XmTYljwXWBCCu4OQwatEHIdQlIYxx2rLqyYXeOV8LYs7HdcWM3hVSGRs2C7HjZjIF7YXYjejHBxJ Chm8yMDHQNbb0p6dZGYtWWCrr/A8MniRRlcW2dyui8mgew3lhlrcpDw0eN4giVdsM8py1jHI8kLc bfH5LmW+6wdrdQIJjK3m+X+OLaxmo0mbr1DsoZe0oJFFf1YHWFcqLjPzxvLcCBXJvGn+g9C16yrL XXLSdQjp/+PWgEEMpBOtKSKHnazljLcC/A8lxz1qFpD4PQAAACV0RVh0ZGF0ZTpjcmVhdGUAMjAy MS0xMC0yMFQxMjo1NjoyNyswMDowMKx3GHgAAAAldEVYdGRhdGU6bW9kaWZ5ADIwMjEtMTAtMjBU MTI6NTY6MjcrMDA6MDDdKqDEAAAAAElFTkSuQmCC" />
                         </div>
-                        <div class="fr-header__navbar">
-                            {% if user.is_authenticated %}
-                                </li>
-                                <button class="fr-btn fr-fi-close-circle-line" id='logout'></button>
-                                {% if CERBERE_AUTH %}
-                                    {% include "common/utils/onclick_redirect.html" with id='logout' url_target='cas_ng_logout' url_params='?next=/' %}
-                                {% else %}
+                        {% if not CERBERE_AUTH %}
+                            <div class="fr-header__navbar">
+                                {% if user.is_authenticated %}
+                                    </li>
+                                    <button class="fr-btn fr-fi-close-circle-line" id='logout'></button>
                                     {% include "common/utils/onclick_redirect.html" with id='logout' url_target='logout' %}
-                                {% endif %}
-                            {% else %}
-                                <button class="fr-btn fr-fi-edit-line" id='login'></button>
-                                {% if CERBERE_AUTH %}
-                                    {% include "common/utils/onclick_redirect.html" with id='login' url_target='cas_ng_login' %}
                                 {% else %}
+                                    <button class="fr-btn fr-fi-edit-line" id='login'></button>
                                     {% include "common/utils/onclick_redirect.html" with id='login' url_target='login' %}
                                 {% endif %}
-                            {% endif %}
-                        </div>
+                            </div>
+                        {% endif %}
                     </div>
                     <div class="fr-header__service">
                         <a href="/" title="Accueil - APiLos">
@@ -78,15 +72,24 @@
                                                 <span class="fr-fi-menu-fill" aria-hidden="true"></span>
                                             </button>
                                             <div class="dropdown-menu dropdown-menu-right apilos-dropdown-menu">
-                                                <a href="{% url 'settings:profile' %}">
-                                                    <span class="fr-fi-equalizer-line fr-mr-1w" aria-hidden="true"></span>Paramètres
-                                                </a>
                                                 {% if CERBERE_AUTH %}
+                                                    {% for habilitation in request.session.habilitations %}
+                                                        <a href="#" class="{% if habilitation.id == request.session.habilitation_id %}apilos-active-habilitation{% endif %}">
+                                                            <b>{{ habilitation.groupe.libelleRole }}</b><br>
+                                                            {% if habilitation.sousTitre1 %}
+                                                                {{ habilitation.sousTitre1 }}<br>
+                                                            {% endif %}
+                                                            {{ habilitation.sousTitre2 }}
+                                                        </a>
+                                                    {% endfor %}
                                                     <a href="{% url 'cas_ng_logout' %}?next=/">
                                                         <span class="fr-fi-logout-box-r-line fr-mr-1w" aria-hidden="true">
-                                                        </span>Cerbere logout
+                                                        </span>Déconnexion
                                                     </a>
                                                 {% else %}
+                                                    <a href="{% url 'settings:profile' %}">
+                                                        <span class="fr-fi-equalizer-line fr-mr-1w" aria-hidden="true"></span>Paramètres
+                                                    </a>
                                                     <a href="{% url 'logout' %}">
                                                         <span class="fr-fi-logout-box-r-line fr-mr-1w" aria-hidden="true"></span>Déconnexion
                                                     </a>
@@ -98,15 +101,7 @@
 
                             {% else %}
                                 <ul class="fr-links-group">
-                                    {% if CERBERE_AUTH %}
-                                        <li class="fr-mx-3w">
-                                            <button class="fr-btn" id='cerbere_login'>
-                                                <span class="fr-fi-account-line fr-mr-1w" aria-hidden="true">
-                                                </span>Cerbere login
-                                            </button>
-                                            {% include "common/utils/onclick_redirect.html" with id='cerbere_login' url_target='cas_ng_login' %}
-                                        </li>
-                                    {% else %}
+                                    {% if not CERBERE_AUTH %}
                                         <li class="fr-mx-3w">
                                             <button class="fr-btn" id='espace_bailleur'>
                                                 <span class="fr-fi-account-line fr-mr-1w" aria-hidden="true">
@@ -133,13 +128,26 @@
                     </div>
                 {% endif %}
             </div>
+            <nav class="fr-nav" id="header-navigation" role="navigation" aria-label="Menu principal">
+                <ul class="fr-nav__list">
+
+                    {% for menu in request.session.menu %}
+
+                        <li class="fr-nav__item">
+                            <a class="fr-nav__link" href="#" target="_self" aria-current="page">{{ menu.libelle }}</a>
+                        </li>
+                    {% endfor %}
+                </ul>
+            </nav>
         </div>
     </div>
-    <div class="fr-header__menu fr-modal" id="modal-404" aria-labelledby="button-405">
+    <!-- TODO : voir si on a besoin de ce block ou si c'est un relicat -->
+    <!-- <div class="fr-header__menu fr-modal" id="modal-404" aria-labelledby="button-405">
         <div class="fr-container">
             <button class="fr-link--close fr-link" aria-controls="modal-404">Fermer</button>
             <div class="fr-header__menu-links">
             </div>
         </div>
-    </div>
+    </div> -->
+
 </header>
