update session with menu

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -581,3 +581,11 @@ table.fullwidth {
   top: 0;
   z-index: 998;
 }
+
+/*
+ * SIAP
+ */
+
+ .apilos-active-habilitation {
+   background-color: pink;
+ }
