rename Ministère and adapt CGU

--- a/templates/editorial/accessibilite.html
+++ b/templates/editorial/accessibilite.html
@@ -31,7 +31,7 @@
                         <li>Par mail&nbsp;: <a href="mailto:contact@apilos.beta.gouv.fr">contact@apilos.beta.gouv.fr</a></li>
                         <li>Par voie postale&nbsp;:
                             <blockquote class="bl-highlight">
-                                Ministère de la Transition écologique et solidaire<br>
+                                Ministère de la Transition écologique et de la Cohésion des territoires<br>
                                 Délégation ministérielle à l’accessibilité<br>
                                 APiLos<br>
                                 Grande Arche <br>
