--- a/templates/layout/footer.html
+++ b/templates/layout/footer.html
@@ -12,7 +12,8 @@
             <div class="fr-footer__content">
                 <p class="fr-footer__content-desc">
                     APiLos est une startup d'état de l'incubateur beta.gouv.fr sous la direction de
-                    la fabrique du numérique dépendant du ministère du développement durable.
+                    la fabrique du numérique dépendant du Ministère de la Transition écologique et
+                    de la Cohésion des territoires.
                     <br>L'objectif est de promouvoir la construction des logement sociaux, réduire
                     l'insécurité locative et publier des statistiques fiables permettant le pilotage
                     éclairé de la politique de logement en France.
