implement recto-verso on all convention template

--- a/templates/emails/bailleur_valide.html
+++ b/templates/emails/bailleur_valide.html
@@ -5,7 +5,7 @@
 <p>Vous pouvez dès maintenant : </p>
 
 <ul>
-    <li>L’imprimer en 3 exemplaires en recto (1 page par feuille).</li>
+    <li>L’imprimer en 3 exemplaires en recto verso (conformément à la Politique d’impression des services de l’Etat).</li>
     <li>Parapher toutes les pages.</li>
     <li>Signer à la fin de la convention. Attention à ne pas dater.</li>
 </ul>
